--- a/saop/templates/base_agent/.env
+++ b/saop/templates/base_agent/.env
@@ -13,9 +13,9 @@ A2A_HOST=0.0.0.0
 A2A_PORT=8000
 
 # --- MCP Configuration ---
-MCP_BASE_URL=http://localhost:8080/mcp
-SAMPLE01_MCP_TOOL_API_KEY=12345678
-SAMPLE02_MCP_TOOL_API_KEY=12345678
+MCP_BASE_URL=http://localhost:9000/mcp
+MCP_HOST=127.0.0.1
+MCP_PORT=9000
 
 
 # --- Observability Configuration ---
