added langgraph tool wrapper, mcp templates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,4 +55,5 @@ dependencies = [
     "aiohttp>=3.9.0",  
     "mcp[cli]>=1.13.0",
     "a2a-sdk[grpc,http-server,telemetry]>=0.3.1",
+    "langchain-mcp-adapters (>=0.1.9,<0.2.0)",
 ]
