--- a/saop/templates/base_agent/.env
+++ b/saop/templates/base_agent/.env
@@ -2,7 +2,7 @@
 # .env
 
 # --- Model Configuration ---
-MODEL_API_KEY=s
+MODEL_API_KEY=model-api-key
 MODEL_BASE_URL=https://api.openai.com/v1
 MODEL_NAME=gpt-4o
 MODEL_PROVIDER=openai
