implemented a working remote MCP server, called and listed tools

--- a/saop/templates/base_agent/.env
+++ b/saop/templates/base_agent/.env
@@ -2,7 +2,8 @@
 # .env
 
 # --- Model Configuration ---
-MODEL_API_KEY=model-api-key
+MODEL_API_KEY=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
+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
 MODEL_BASE_URL=https://api.openai.com/v1
 MODEL_NAME=gpt-4o
 MODEL_PROVIDER=openai
@@ -17,7 +18,10 @@ A2A_PORT=8000
 MCP_BASE_URL=http://localhost:9000/mcp
 MCP_HOST=127.0.0.1
 MCP_PORT=9000
+MCP_GITHUB_BASE_URL=https://api.githubcopilot.com/mcp/
 
+# --- GitHub MCP Configuration ---
+GITHUB_PAT=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
 
 # --- Observability Configuration ---
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
